--- a/src/main/resources/assetmanager-datasource.properties
+++ b/src/main/resources/assetmanager-datasource.properties
@@ -1,3 +1,9 @@
+########################################
+##                                    ##
+## AssetManager DataSource properties ##
+##                                    ##
+########################################
+
 assetmanager.datasource.driverClassName=org.postgresql.Driver
 assetmanager.datasource.url=jdbc:postgresql://10.80.10.23:5432/gtools_asset_manager
 assetmanager.datasource.username=postgres
